src/test/ui/consts/const_let_refutable.stderr
error[E0005]: refutable pattern in function argument: `&[]` not covered
  --> $DIR/const_let_refutable.rs:3:16
   |
LL | const fn slice([a, b]: &[i32]) -> i32 {
   |                ^^^^^^ pattern `&[]` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
